--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <p style="font-size: 24px; font-weight: 800;">Header Logo</p>
+        <p class="logo" style="font-size: 24px; font-weight: 800;">Header Logo</p>
         <div class="links" style="font-size: 18px;">
             <ul>
                 <li>header link one</li>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="partone">
-        <p style="font-size: 18px;">
+        <p class="hero">
             <strong style="font-size: 48px;">This website is awesome</strong> <br>
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast <br>
             <button>Sign up</button>
@@ -26,16 +26,24 @@
         <p class="img">This is a placeholder for an image</p>
     </div>
     <div class="parttwo">
-        <p>Some random information.</p>
+        <p class="information">Some random information.</p>
         <div class="illustrations">
-           <p> </p>
-           <p>this is some subtext under an illustration or image</p>
-           <p> </p>
-           <p>this is some subtext under an illustration or image</p>
-           <p> </p>
-           <p>this is some subtext under an illustration or image</p>
-           <p> </p>
-           <p>this is some subtext under an illustration or image</p> 
+            <div class="illustration1">
+               <p class="illustration"> </p>
+               <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="illustration2">
+               <p class="illustration"> </p>
+               <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="illustration3">
+               <p class="illustration"> </p>
+               <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="illustration4">
+               <p class="illustration"> </p>
+               <p class="subtext">this is some subtext under an illustration or image</p> 
+            </div>
         </div>   
     </div>
     <div class="partthree">
