Added image and made final stylizations

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast <br>
             <button>Sign up</button>
         </p>
-        <p class="img">This is a placeholder for an image</p>
+        <img src="./image/Placeholder.jpg" alt="placeholder image" class="img">
     </div>
     <div class="parttwo">
         <p class="information">Some random information.</p>
