--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <p class="logo" style="font-size: 24px; font-weight: 800;">Header Logo</p>
         <div class="links" style="font-size: 18px;">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
         </div>
     </div>
