added images in the information section

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <p class="information">Some random information.</p>
         <div class="illustrations">
             <div class="illustration1">
-               <p class="illustration"> </p>
+               <img src="image/Placeholder.jpg" class="illustration">
                <p class="subtext">this is some subtext under an illustration or image</p>
             </div>
             <div class="illustration2">
-               <p class="illustration"> </p>
+               <img src="image/Placeholder.jpg" class="illustration">
                <p class="subtext">this is some subtext under an illustration or image</p>
             </div>
             <div class="illustration3">
-               <p class="illustration"> </p>
+                <img src="image/Placeholder.jpg" class="illustration">
                <p class="subtext">this is some subtext under an illustration or image</p>
             </div>
             <div class="illustration4">
-               <p class="illustration"> </p>
+                <img src="image/Placeholder.jpg" class="illustration">
                <p class="subtext">this is some subtext under an illustration or image</p> 
             </div>
         </div>   
